[package]
name = "unwrap"
version = "0.2.0"
authors = ["Andrew Cann <shum@canndrew.org>"]
description = "An unwrap! macro"
documentation = "https://github.com/canndrew/unwrap"
homepage = "https://github.com/canndrew/unwrap"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/canndrew/unwrap"

[dependencies]
